# earthfetch

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docs.yml  live.yml
docs/: DEVELOPMENT.md  analysis.md  aois.md  api.md  benchmarks.md  caching.md  index.md  quickstart.md  sources.md  stability.md
examples/: interactive_fetch.py
scripts/: benchmark.py
src/earthfetch/: __init__.py  _composite.py  _terrain.py  aoi.py  cli.py  composite.py  copernicus.py  exceptions.py  export.py  indices.py  interop.py  landsat.py  load.py  naip.py  raster.py  sentinel.py  terrain.py  timeseries.py  usgs.py  utils.py  vector.py  zonal.py
tests/: test_cache.py  test_coverage.py  test_dx.py  test_earthfetch.py  test_features.py  test_landsat.py  test_live.py  test_mocked_http.py  test_property.py  test_suite.py  test_tier1.py  test_vector.py
