[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "earthfetch"
dynamic = ["version"]
description = "Download USGS 3DEP DEMs and Sentinel-2 L2A imagery with zero API keys"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Ethan Muhlestein", email = "ethannmuhlestein@gmail.com" }]
keywords = ["dem", "sentinel-2", "usgs", "3dep", "satellite", "elevation", "stac", "gis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = ["requests>=2.25"]

[project.optional-dependencies]
raster = ["rasterio>=1.3"]
xarray = ["rasterio>=1.3", "xarray>=2023.1"]
all = ["rasterio>=1.3", "xarray>=2023.1"]
dev = ["pytest>=7", "responses>=0.23", "rasterio>=1.3", "xarray>=2023.1",
       "ruff>=0.4", "hypothesis>=6"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]

[tool.hatch.version]
path = "src/earthfetch/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[project.scripts]
earthfetch = "earthfetch.cli:main"

[project.urls]
Homepage = "https://github.com/Ethan-M2024/earthfetch"
